--- a/_posts/2021-06-25-FaceNet.md
+++ b/_posts/2021-06-25-FaceNet.md
@@ -4,8 +4,8 @@ title: "FaceNet"
 tags: [Face Recogntion, MTCNN, FaceNet]
 comments: true
 ---
-# Face recognition - Nhận diện khuôn mặt 
-Đầu tiên chúng ta cần phân biệt khái niệm `face recognition` và `face verification`:
+
+Trong bài này chúng ta sẽ đi tìm hiểu về bài toán nhận diện khuôn mặt. Hiện nay việc nhận diện khuôn mặt được ứng dụng khá nhiều trong việc chấm công, theo dõi đối tượng... Đầu tiên chúng ta cần phân biệt khái niệm `face recognition` và `face verification`:
 ## Face verification
 Khi chúng ta có ID, có hình ảnh của người đó, nhập ID vào hệ thống rồi kiểm tra xem ảnh đó có phải là của người có mã ID kia không. Ở đây chỉ phải so sánh ảnh `1:1`.
 
