--- a/_posts/2021-07-06-OOP-YOLOv1.md
+++ b/_posts/2021-07-06-OOP-YOLOv1.md
@@ -8,7 +8,8 @@ Trong bài này chúng ta sẽ cùng tìm hiểu các ý chính về YOLOv1.
 Không giống như các mô hình two-stages như R-CNN, Fast-RCNN, Faster-RCNN, YOLOv1 là mô hình one-stage để nhận diện vật thể. Bạn chỉ cần cho ảnh đi qua model duy nhất một lần là có kết quả, đó là lý do vì sao có tên YOLO - You Only Look One.
 Để hiểu rõ một số phần liên quan các bạn có thể đọc từ bài báo gốc. Ở đây mình sẽ đi trực tiếp vào phần inference và training model.
 
-1. Input image được chia thành $ S \times S $ grid cells ($S=7$). Nếu tâm của object thuộc grid cell nào thì cell đó chịu trách nhiệm phát hiện vật thể đó. Đối với mỗi grid cell sẽ dự đoán $B$ bounding boxes ($B=2$) và xác suất các classes với điều kiện tồn tại object trong cell đó $Pr(class_i | object)$. Ban đầu sử dụng bộ dữ liệu PASCAL VOC có số classes $C = 20$.
+1. Input image được chia thành $ S \times S $ grid cells ($S=7$). Nếu tâm của object thuộc grid cell nào thì cell đó chịu trách nhiệm phát hiện vật thể đó. 
+Đối với mỗi grid cell sẽ dự đoán $B$ bounding boxes ($B=2$) và xác suất các classes với điều kiện tồn tại object trong cell đó $Pr(class_i | object)$. Ban đầu sử dụng bộ dữ liệu PASCAL VOC có số classes $C = 20$.
 
 2. Đối với mỗi bounding box lại dự đoán 5 giá trị:
 * **4 tọa độ** của của bounding box **$(x, y, w, h)$**. 
