edit title face recognition

--- a/_posts/2021-06-25-FaceNet.md
+++ b/_posts/2021-06-25-FaceNet.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "FaceNet"
-tags: [Face Recogntion, MTCNN, FaceNet]
+tags: [Face Recognition, MTCNN, FaceNet]
 comments: true
 ---
 
