--- a/_posts/2021-06-20-MTCNN.md
+++ b/_posts/2021-06-20-MTCNN.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "Face recognition with MTCNN and FaceNet"
-tags: [Face Recogntion, MTCNN, FaceNet]
+tags: [Face Recognition, MTCNN, FaceNet]
 comments: true
 ---
 
