--- a/_posts/2021-07-25-mAP.md
+++ b/_posts/2021-07-25-mAP.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "mAP - mean Average Precision for Object Detection"
-tags: [FPN, Object Detection]
+tags: [Object Detection]
 comments: true
 ---
 
