--- a/_posts/2021-07-25-mAP.md
+++ b/_posts/2021-07-25-mAP.md
@@ -8,8 +8,8 @@ comments: true
 **AP** (average precision) là giá trị đo phổ biến để đánh giá độ chính xác của bài toán object detection như Faster R-CNN, SSD... Average precision chính là trung bình của precision cho các giá trị recall thuộc [0, 1]. Trước khi tìm hiểu về AP chúng ta cùng nhắc lại một số khái niệm sau.
 
 Ví dụ bài toán về phân loại phụ nữ có thai hay không thì việc có thai coi là Positive, việc không có thai coi là Negative. True/False thể hiện dự đoán đúng hay sai. 
-- True Positive: dự đoán là có thai - Positive, thực tế thì đúng là có thai (True)
-- False Positive: dự đoán là có thai - Positive, thực tế thì không có thai (False). Dự đoán người không có thai thành có thai.
+- True Positive: dự đoán có thai - Positive, thực tế thì đúng là có thai (True)
+- False Positive: dự đoán có thai - Positive, thực tế thì không có thai (False). Dự đoán người không có thai thành có thai.
 - True Negative: dự đoán không có thai - Negative, thực tế không có thai (True)
 - False Negative: dự đoán không có thai - Negative, thực tế thì có thai (False)
 
@@ -35,14 +35,14 @@ IoU đo độ chồng chập giữa 2 boxes. Chúng ta thường dùng IoU để
 Đối với bài toán object detection:
 - TP (True Positive): phát hiện chính xác, detection với IoU ≥ threshold
 - FP (False Positive): phát hiện sai, detection với IoU < threshold
-- FN (False Negative): droudth-truth box không được phát hiện (mô hình không bắt được đối tượng trong ảnh )
+- FN (False Negative): groudth-truth box không được phát hiện (mô hình không bắt được đối tượng trong ảnh )
 - TN (True Negative): không được dùng. Có thể hiểu là những phần của ảnh không chứa đối tượng và thực tế là như vậy.
 
 Ví dụ như hình dưới nếu IoU threshold là 0.5, IoU cho dự đoán là 0.7 khi đó chúng ta phân loại đúng (TP). Ngược lại nếu IoU là 0.3 chúng ta phân loại sai (FP).
 
 <img src="https://miro.medium.com/max/941/1*S8osGaPdGMnJc-WFIqR3eA.jpeg" style="display:block; margin-left:auto; margin-right:auto">
 
-> Predicted boxes phải được phân loại đúng class trước và sau đó chúng ta mới đi xác định precision và recall dựa trên IoU. Chứ bây giờ phân loại sai class mà xác định IoU thì không có ý nghĩa.
+> Predicted boxes phải được phân loại đúng class trước và sau đó chúng ta mới đi xác định precision và recall dựa trên IoU. Chứ bây giờ phân loại sai class mà xác định IoU thì không có ý nghĩa. Chỗ này cần xem thêm cả confidence score, hiện tại chưa tính tới nó.
 
 Và khi chúng ta thay đổi IoU threshold False Positive có thể chuyển thành True Positive như hình dưới đây.
 
@@ -52,7 +52,7 @@ Và khi chúng ta thay đổi IoU threshold False Positive có thể chuyển th
 > Average Precision (AP) is the area under the precision-recall curve - diện tích nằm dưới đường precision-recall.
 mAP (mean average precision) is the average of AP.
 
-Chúng ta sẽ tính AP (average precision) thông qua một ví dụ dưới đây. Trong tập dữ liệu chỉ chứa 5 quả táo. Chúng ta thu thập tất cả các dự đoán cho tất cả các hình ảnh và xếp hạng theo thứ tự giảm dần của predicted confidence level (GIÁ TRỊ NÀO? F1). Cột thứ hai thể hiện dự đoán đúng hay không. Trong ví dụ này dự đoán được coi là đúng nếu có $IoU \geq 0.5$
+Chúng ta sẽ tính AP (average precision) thông qua một ví dụ dưới đây. Trong tập dữ liệu chỉ chứa 5 quả táo. Chúng ta thu thập tất cả các dự đoán cho tất cả các hình ảnh và xếp hạng theo thứ tự giảm dần của predicted confidence level. Cột thứ hai thể hiện dự đoán đúng hay không. Trong ví dụ này dự đoán được coi là đúng nếu có $IoU \geq 0.5$
 
 <img src="https://miro.medium.com/max/941/1*9ordwhXD68cKCGzuJaH2Rg.png" style="display:block; margin-left:auto; margin-right:auto">
 
