--- a/_posts/2021-08-02-UNet.md
+++ b/_posts/2021-08-02-UNet.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "U-Net"
-tags: [Encoder-Decoder Network, Image Segmensation]
+tags: [Encoder-Decoder Network, Image Segmentation]
 comments: true
 ---
 
