--- a/_posts/2021-06-20-MTCNN.md
+++ b/_posts/2021-06-20-MTCNN.md
@@ -1,5 +1,6 @@
 ---
 layout: post
+mathjax: true
 title: "Face recognition with MTCNN and FaceNet"
 tags: [Face Recognition, MTCNN, FaceNet]
 comments: true
