--- a/_posts/2021-06-25-FaceNet.md
+++ b/_posts/2021-06-25-FaceNet.md
@@ -23,7 +23,8 @@ Nhận diện khuôn mặt có thể được ứng dụng trong việc chấm c
 
 Đầu vào là ảnh của một người, đưa qua mạng CNN để dự đoán người đó là ai, output là softmax layer. Do bản thân có ít ảnh nên để model hoạt động tốt cũng rất khó. Ngoài ra thuật toán này có một nhược điểm khi có thêm người mới (ví dụ công ty bổ sung người) chúng ta phải train lại model vì đầu ra output của chúng ta tăng thêm 1. Việc này gây tốn thời gian và không tốt cho những công ty có số người luôn biến động.
 
-![2](../images/facenet/2.png)
+<img src="../images/facenet/2.png"  style="display:block; margin-left:auto; margin-right:auto">
+
 ## 2. Learning a similarity function
 Nhìn vào tên chúng ta có thể đoán được thuật toán này làm gì, thuật toán này sẽ xác định khoảng cách giữa 2 bức ảnh (qua norm `l1` hoặc norm `l2`), nếu 2 bức ảnh của 1 người sẽ cho khoảng cách nhỏ nhất, nếu thuộc 2 người khoảng cách sẽ lớn hơn. Ở đây chúng ta có thể sử dụng ngưỡng `threshld` để phân biệt là cùng một người hay khác nhau (việc chọn ngưỡng này có thể quyết định kết quả của bài toán). 
 ```
@@ -35,11 +36,13 @@ Thuật toán này giải quyết nhược điểm của `one-shot learning` vì
 Điều quan trọng là làm sao chúng ta biểu diễn ảnh lên không gian n chiều một cách hợp lý để sau đó có thể sử dụng khoảng cách để dự đoán nhãn. **Siamese network** sẽ giúp chúng ta giải quyết vấn đề này.
 
 Trong khóa học của Andrew Ng. đã nói rất rõ điều này.
-![0](../images/facenet/0.png)
+
+<img src="../images/facenet/0.png" style="display:block; margin-left:auto; margin-right:auto">
 
 # Siamese Network
 Kiến trúc mạng mà khi chúng ta đưa 2 ảnh đầu vào và mô hình dự đoán có cùng một người hay không được gọi là `Siamese Network`.
-![3](../images/facenet/3.png)
+
+<img src="../images/facenet/3.png" style="display:block; margin-left:auto; margin-right:auto">
 
 Kiến trúc Siamese network dữ trên base model dạng CNN đã được loại bỏ output layer, lúc này ảnh sẽ được encoding thành vector embedding. Đầu vào của Siamese Network là 2 ảnh bất kì  $ x^{(1)} $,  $ x^{(2)} $ , output của Siamese Network là 2 vector tương ứng biểu diễn 2 ảnh đầu vào $ f(x^{(1)}) $,  $ f(x^{(2)}) $ hay còn được gọi là **encoding của ảnh** . Sau đó 2 vector này sẽ được sử dụng để tính **similarity function** (so sánh sự khác biệt giữa chúng).
 
@@ -48,12 +51,14 @@ $$ d(x^{(1)}, x^{(2)}) = ||f(x^{(1)})-f(x^{(2)})||_2^{2} $$
 Có thể xem thêm chi tiết tại [bài báo này](https://www.cs.toronto.edu/~ranzato/publications/taigman_cvpr14.pdf).
 
 Làm sao để train Siamese Network? Siamese Network bao gồm 2 mạng NN **chia sẻ với nhau parameters**.
-![4](../images/facenet/4.png)
+
+<img src="../images/facenet/4.png" style="display:block; margin-left:auto; margin-right:auto">
+
 Nhiệm vụ của chúng ta là học được các parameters của NN. Để học được điều này chúng ta dựa trên `similarity function`, nếu 2 ảnh cùng một người thì đạt giá trị nhỏ, nếu 2 ảnh 2 người khác nhau thì giá trị lớn. Mục đích chính là tạo ra được `good encoding` của ảnh.
 
 Để train model chúng ta cần định nghĩa loss function, ở đây sẽ dùng **triplet loss function**.
 
-![1](../images/facenet/1.png)
+<img src="../images/facenet/1.png" style="display:block; margin-left:auto; margin-right:auto">
 
 # Triplet loss function 
 [Bài báo gốc](https://arxiv.org/abs/1503.03832)
@@ -61,7 +66,8 @@ Một cách để học được các parameters mạng NN là áp dụng gradie
 Để áp dụng triplet loss mỗi lần chúng ta cần 3 bức ảnh trong đó có một bức ảnh gọi là `anchor` (bức ảnh được cố định). Hai ảnh còn lại một ảnh là `negative` và một ảnh là `positive` (cùng người). Đây là lý do loss function có tên là **triplet** - xem 3 bức ảnh cùng lúc.
 
 Kí hiệu ảnh anchor, positive, negative lần lượt là **A, P, N.**
-![5](../images/facenet/5.png)
+
+<img src="../images/facenet/5.png" style="display:block; margin-left:auto; margin-right:auto">
 
 Triplet loss function lấy 3 bức ảnh làm input (A, P, N), chúng ta hy vọng `d(A, P) < d(A, N)`. Ở đây chúng ta sẽ thêm hệ số alpha không âm để khoảng cách giữa vế trái và phải lớn hơn.
 
@@ -116,11 +122,14 @@ Mục tiêu của loss function là tối thiểu khoảng cách giữa 2 ảnh 
 * Ảnh Anchor A và negative N giống nhau nhất để khoảng cách d(A, N) nhỏ. Điều này tương tự việc thuật toán phân biệt được ảnh của hai anh em sinh đôi vậy.
 
 Khi đã chọn được triplets chúng ta có thể bắt đầu quá trình training.
-![6](../images/facenet/6.png)
+
+<img src="../images/facenet/6.png" style="display:block; margin-left:auto; margin-right:auto">
 
 # Face verification and Binary classification
 Thông qua triplet loss chúng ta có thể học được các parameters của ConvNet giúp giải quyết bà toán face recognition. Ngoài ra face recognition có thể được coi là bài toán **binary classification**.
-![7](../images/facenet/7.png)
+
+<img src="../images/facenet/7.png" style="display:block; margin-left:auto; margin-right:auto">
+
 Thông qua Siamese Network sẽ nhận được 2 vector encoding của 2 ảnh. Sau đó chúng đưa vào layer để dự đoán output - xác suất (training set nếu cùng 1 người thì label = 1, hai người khác nhau thì label = 0, bài toán phân loại Logistic regression).
 $$ \widehat{y} = \sigma(\sum_{k=1}^{128} w_{k} \left| f(x^{(i)})_{k}-f(x^{(j)})_{k} \right| + b) $$
 
@@ -131,12 +140,14 @@ $$ \widehat{y} = \sigma(\sum_{k=1}^{128} w_{k} \frac{(f(x^{(i)})_k - f(x^{(j)})_
 cái này còn được gọi là **chi square form hay chi square similarity**.
 
 Tất nhiên đối với cách này chúng ta phải thay đổi cách gãn nhãn như đề cập bên trên. 
-![9](../images/facenet/9.png)
+
+<img src="../images/facenet/9.png" style="display:block; margin-left:auto; margin-right:auto">
 
 **Tip (good practice for the deployment):**
 * Khi deploy hệ thống nhận diện khuôn mặt thay vì lưu tất cả ảnh ở dạng raw chúng ta có thể **tính trước vector encoding** (ví dụ ở đây vector with 128 dimensions dùng được cho cả `triplet loss` và `binary classification`) và lưu lại. Khi đó có thể tiết kiệm được rất nhiều bộ nhớ.
 * Khi có một người mới đến chỉ cần chụp ảnh, thông qua mạng NN đã train sẽ xác định được vector encoding của ảnh đó, sau đó đi tính phần phía sau của model để nhận diện.  
-![8](../images/facenet/8.png)
+
+<img src="../images/facenet/8.png" style="display:block; margin-left:auto; margin-right:auto">
 
 # Pretrained model FaceNet
 Những mô hình pretrain được huấn luyện trên các dữ liệu lên tới hàng triệu ảnh. Do đó có khả năng mã hóa rất tốt các bức ảnh trên không gian 128 chiều. Việc còn lại của chúng ta là sử dụng lại mô hình, tính toán embedding véc tơ và huấn luyện embedding véc tơ bằng một classifier đơn giản để phân loại classes.
