--- a/_posts/2021-08-26-WGAN.md
+++ b/_posts/2021-08-26-WGAN.md
@@ -17,7 +17,7 @@ Trong mô hình [GAN truyền thống](https://arxiv.org/abs/1406.2661), discrim
 
 Dưới đây là thuật toán cho Wasserstein GAN được các tác giả đưa ra.
 
-<img title="Algorithm of WGAN" src="https://machinelearningmastery.com/wp-content/uploads/2019/05/Algorithm-for-the-Wasserstein-Generative-Adversarial-Networks-1.png" alt="Algorithm of WGAN">
+<img title="Algorithm of WGAN" src="https://machinelearningmastery.com/wp-content/uploads/2019/05/Algorithm-for-the-Wasserstein-Generative-Adversarial-Networks-1.png" alt="Algorithm of WGAN" style="display:block; margin-left:auto; margin-right:auto">
 
 Sự khác biệt trong triển khai WGAN khác với GAN truyền thống như sau:
 1. Output layer của critic sử dụng linear activation function (không sử dụng sigmoid function)
@@ -211,6 +211,11 @@ def define_gan(generator, critic):
 	model.compile(loss=wasserstein_loss, optimizer=opt)
 	return model
 ```
+
+Đây là ảnh được tạo ra sau khi training với 10 epochs.
+
+<img src="../images/WGAN/generated_digit.png" style="display:block; margin-left:auto; margin-right:auto">
+
 Source code mọi người có thể tham khảo [tại đây](https://github.com/huytranvan2010/WGAN).
 
 ## Tài liệu tham khảo
