--- a/_posts/2021-08-26-WGAN.md
+++ b/_posts/2021-08-26-WGAN.md
@@ -26,7 +26,7 @@ Sự khác biệt trong triển khai WGAN khác với GAN truyền thống như 
 model.add(Dense(1))
 ```
 
-2. Sử dụng `label = -1` cho real images, `label = 1` cho fake images (GAN truyền thông sử dụng 1, 0 cho real và fake images)
+2. Sử dụng `label = -1` cho real images, `label = 1` cho fake images (GAN truyền thông sử dụng 1, 0 cho real và fake images). Đây chỉ là một cách giúp triển khai WGAN, đôi khi không cần gán nhãn vẫn có thể triển khai được, do trong discriminator có phân biệt rõ ảnh thật giả.
 
 ```python
 # tạo class labels -1 cho real images
@@ -44,7 +44,7 @@ Critic sẽ đi maximize $\mathbb{E}(c(x)) - \mathbb{E}(c(g(z))$ do nó muốn p
 
 $$y(x) \cdot \mathbb{E}(c(x)) + y(g(z) \cdot \mathbb{E}(c(g(z))$$
 
-ở đây, $y(x)$ là label của example $x$.
+ở đây, $y(x)$ là label của example $x$. Xin nhấn mạnh lại việc gán nhãn như này chỉ là một cách triển khai WGAN, chúng ta hoàn toàn có thể làm cách khác.
 
 ```python
 import tensorflow as tf
