add some info about model

--- a/_posts/2021-08-02-UNet.md
+++ b/_posts/2021-08-02-UNet.md
@@ -16,7 +16,7 @@ Bài toán image segmentation được chia thành 2 loại:
 
     Một số kiến trúc hay được dùng để thực hiện semantic segmentation như U-Net...
 
-* **Instance segmentation**: thưc hiện segment đối với các đối tượng khác nhau (phân biệt giữa các đối tượng). Loại này có thể áp dụng để theo dõi hành vi của từng người. Có thể dùng Faster R-CNN để thực hiện segmentation.
+* **Instance segmentation**: thực hiện segment đối với các đối tượng khác nhau (phân biệt giữa các đối tượng). Loại này có thể áp dụng để theo dõi hành vi của từng người. Có thể dùng Mask R-CNN để thực hiện segmentation.
 
 <img src="https://files.ai-pool.com/d/DV8TLgkWsAEGsEs.jpg" style="display:block; margin-left:auto; margin-right:auto">
 
@@ -34,6 +34,10 @@ Trong kiến trúc U-Net có một layer mới là Transposed Convolution, khái
 - Mũi tên đỏ là Max Pooling `2x2`
 - Mũi tên xanh lá cây là Transposed convolution
 - Mũi tên xanh ngọc là Conv layer `1x1`
+- Các số trên đỉnh hình chữ nhật chính là số channels của output
+- Kích thước nằm dọc bên cạnh hình chữ nhật chính là kích thước là output
+
+Nhận thấy kiến trúc U-Net không có lớp fully connected layer nào.
 
 **Encoder**
 
@@ -41,11 +45,11 @@ Phần này bao gồm các Conv layers và MaxPooling thông thường. Đi từ
 
 **Decoder**
 
-Phần này ngược lại với encoder, làm tăng `width x height` và giảm `depth`. Để làm được điều này cần áp dụng transposed convolution. Mỗi giai đoạn của decoder lại lấy layer phía đối xứng của **encoder** crop rồi concatenate lại (cách kết nối này tương tự với cách kết nối trong một số kiến trúc như ResNet hay DenseNet).
+Phần này ngược lại với encoder, làm tăng `width x height` và giảm `depth`. Để làm được điều này cần áp dụng transposed convolution. Mỗi giai đoạn của decoder lại lấy layer phía đối xứng của **encoder** crop rồi concatenate lại (cách kết nối này tương tự với cách kết nối trong một số kiến trúc như ResNet hay DenseNet giúp cải thiện performance của model).
 
 Nếu ảnh đầu vào của mình là ảnh màu kích thước $h \times w \times 3$ thì số channels đầu tiên là 3. Ở phần decoder chỗ áp dụng Conv layer `1x1`, số filters chính là số classes mình cần segment, cái này tùy thuộc vào từng bài toán cụ thể. Output sẽ có dạng $h \times w \times \text{classes}$. Nếu lấy `argmax` theo chiều của channels chúng ta sẽ biết được từng pixel thuộc về class nào. Nhóm các pixel chung class vào một nhóm và gán màu cho chúng. Từ đây ta có thể tạo mask cho ảnh ban đầu với các phần segment của ảnh ban đầu.
  
-Lý do sử dụng skip conneection ở đây là nếu chỉ sử dụng feature map ở phía bên dưới để xây dựng lại feature map có spatial dimension cao hơn thì rất nhiều thông tin trên spatial dimension bị mất. Chính việc thêm skip connection ở phần **encoder** chúng ta sẽ tái tạo lại vị trí của các pixels tốt hơn.
+Lý do sử dụng skip connection ở đây là nếu chỉ sử dụng feature map ở phía bên dưới để xây dựng lại feature map có spatial dimension cao hơn thì rất nhiều thông tin trên spatial dimension bị mất. Chính việc thêm skip connection ở phần **encoder** chúng ta sẽ tái tạo lại vị trí của các pixels tốt hơn.
 
 ## Loss function
 Đây là bài toán phân lớp cho các pixels nên loss function là tổng cross entropy của các pixels trong ảnh.
@@ -57,6 +61,9 @@ Mình còn đang viết tiếp nữa.
 2. https://lmb.informatik.uni-freiburg.de/people/ronneber/u-net/
 3. https://test.neurohive.io/en/popular-networks/u-net/
 4. https://www.coursera.org/learn/convolutional-neural-networks/home/week/3
+5. https://github.com/zhixuhao/unet
+6. https://lars76.github.io/2018/09/27/loss-functions-for-segmentation.html
+7. https://arxiv.org/abs/1505.04597
 
 
 
