--- a/_posts/2021-05-09-Xac-suat.md
+++ b/_posts/2021-05-09-Xac-suat.md
@@ -117,7 +117,7 @@ Phụ thuộc vào target space là rời rạc hay liên tục chúng ta sẽ c
 
 > Với phân bố rời rạc, khi tính xác suất chúng ta sử dụng tổng, với phân bố liên tục chúng ta sử dụng tích phân với hàm mật độ xác suất
 
-Khi target space là rời rạc, lúc này chúng ta có thể chỉ rõ xác suất mà random variable $X$ nhận một giá trị cụ thể nào đó $x \in \mathcal{T}$, kí hiệu là $P(X = x)$. Biểu diễn $P(X = x)$ cho discrete random variable $X$ được gọi là *hàm khối xác suất (probability mass function pmf)*. Như ví dụ ở trên ta quan tâm đến số lần lấy được đồng vàng trong 2 lần rút coin có trả lại $\mathcal{T}=\left\{0, 1, 2\right\}$, random variable $X$.
+Khi target space là rời rạc, lúc này chúng ta có thể chỉ rõ xác suất mà random variable $X$ nhận một giá trị cụ thể nào đó $x \in \mathcal{T}$, kí hiệu là $P(X = x)$. Biểu diễn $P(X = x)$ cho discrete random variable $X$ được gọi là *hàm khối xác suất (probability mass function pmf)*. Như ví dụ ở trên ta quan tâm đến số lần lấy được đồng vàng trong 2 lần rút coin có trả lại $\mathcal{T} = \left\{ 0, 1, 2 \right\}$, random variable $X$.
 
 Nếu target space $\mathcal{T}$ là liên tục, một cách tự nhiên là xét xác suất random variable $X$ rơi vào một đoạn nào đó $P(a \leq X \leq b)$ với $a < b$. Theo quy ước, gọi xác suất random variable $X$ nhỏ hơn giá trị $x$ nào đó là $P(X \leq x)$. Biểu diễn $P(X \leq x)$ cho biến ngẫu nhiên liên tục được gọi là *hàm phân phối tích lũy (cumulative distribution function)*. Với biến ngẫu nhiên liên tục ta quan tâm đến xác suất $X$ nằm trong khoảng nào đó, từ đây có khái niệm *hàm mật độ xác suất (probability density distribution pdf)* $p(x)$. Chúng ta sẽ quay lại khái niệm này trong bài về xác suất của biến ngẫu nhiên liên tục.
 
@@ -169,7 +169,7 @@ Lấy tổng một cột chia cho tổng của cả bảng. Ở đây ghi gọn 
 
 $$p(y) = \sum_x p(x, y)$$
 
-**Conditional probability** - xác suất có điều kiện, chúng ta quan tâm xác suất random varibale $Y$ nhận giá trị $y$ khi đã biết random variable $X$ nhận giá trị $x$. Ta có $P(Y=y| X=x) = p(y|x)$.
+**Conditional probability** - xác suất có điều kiện, chúng ta quan tâm xác suất random varibale $Y$ nhận giá trị $y$ khi đã biết random variable $X$ nhận giá trị $x$. Ta có $P(Y=y \| X=x) = p(y \| x)$.
 
 Như hình trên ta thấy:
 
@@ -237,18 +237,17 @@ $$
 
 ## Quy tắc Bayes
 
-Trong Machine learning và Bayestian statistics, chúng ta quan tâm đến xác định xác suất của random varibales $y$ khi đã quan sát trước được một số random variables $x$. Giả sử chúng ta có một số hiểu biết trước về random variable chưa quan sát $x$ thông qua $p(y)$ và mối quan hệ $p(x|y)$ giữa $x$ và $y$. Nếu chúng ta quan sát được $x$, có thể dựa vào quy tắc Bayes để xác định $p(y|x)$ như sau:
+Trong Machine learning và Bayestian statistics, chúng ta quan tâm đến xác định xác suất của random varibales $y$ khi đã quan sát trước được một số random variables $x$. Giả sử chúng ta có một số hiểu biết trước về random variable chưa quan sát $x$ thông qua $p(y)$ và mối quan hệ $p(x \|y)$ giữa $x$ và $y$. Nếu chúng ta quan sát được $x$, có thể dựa vào quy tắc Bayes để xác định $p(y|x)$ như sau:
 
 $$
 \underset{\text{posterior}}{\underbrace{p(y|x)}} = \frac{\overset{\text{likelihood}}{\overbrace{p(x|y)}} \overset{\text{prior}}{\overbrace{p(y)}}} {\underset{\text{evidence}}{\underbrace{p(x)}}} = \frac{p(x,y)}{p(x)}
 $$
 
-
 Quy tắc Bayes này có thể được suy ra từ phần conditional probability ở phần trước. 
 
 $p(y)$ là *prior probability* - xác suất tiên nghiệm, cái thể hiện sự hiểu biết chủ quan của chúng ta về variable $y$. Chúng ta có thể chọn bất kỳ prior nào mà thấy hợp lý, tuy nhiên cần chú ý prior là khác 0. Ví dụ tung xúc xắc có thể dự đoán được xác suất cho mỗi mặt là $\frac{1}{6}$.
 
-$p(y|x)$ là *posterior probability* - xác suất hậu nghiệm. Như đã nói đây là xác suất có điều kiện, được suy ra khi đã biết random variable $x$.
+$p(y \|x)$ là *posterior probability* - xác suất hậu nghiệm. Như đã nói đây là xác suất có điều kiện, được suy ra khi đã biết random variable $x$.
 
 Trong một số trường hợp việc xác định trực tiếp $p(x)$ khó khăn thì chúng ta sẽ dựa trên xác suất đồng thời của 2 random variables $p(x, y)$ như sau:
 
