add tutorial about Makefile and Linux commands

--- a/_posts/2022-04-13-My-note.md
+++ b/_posts/2022-04-13-My-note.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 mathjax: true
-title: "Eigendecomposition của ma trận"
+title: "My note"
 tags: [Math4CV]
 comments: true
 ---
@@ -103,8 +103,11 @@ https://github.com/conda/conda/issues/8492
 - https://viblo.asia/p/lap-trinh-shell-bash-script-1VgZvER9KAw 
 
 **11. SSH vaof Gitlab** 
+- https://www.theserverside.com/blog/Coffee-Talk-Java-News-Stories-and-Opinions/How-to-configure-GitLab-SSH-keys-for-secure-Git-connections
+- https://shareprogramming.net/cach-them-ssh-key-vao-github/
+Nói chung tương tự như Github
 
-**12. Hướng dẫn sử dụng SVN** 
+12. Hướng dẫn sử dụng SVN*
 
 - https://hoccungchuyengia.com/huong-dan-su-dung-svn-trong-du-an/
 - https://docs.gitlab.com/ee/gitlab-basics/start-using-git.html
@@ -112,3 +115,10 @@ https://github.com/conda/conda/issues/8492
 **13. Introduction to bash scripting** 
 
 - https://github.com/pushkar100/notes-bash-shell-scripting 
+
+**14. Xem lại lịch sử commands**
+
+15. Install Cmake
+Nếu cài bằng sudo hay cài bản thấp, uninstall nó theo link này https://www.shorttutorials.com/apt-get-commands/remove-cmake.html và cài lại theo link nhttps://www.fosslinux.com/38392/how-to-install-cmake-on-ubuntu.htmày cài từ source.
+
+16. 
